Address warnings and deprecations (#173)